--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,25 @@
+alembic==1.7.5
+aniso8601==9.0.1
+cffi==1.15.0
 click==8.0.3
+cryptography==36.0.1
 Flask==2.0.2
 Flask-Login==0.5.0
+Flask-Migrate==3.1.0
+Flask-RESTful==0.3.9
 Flask-SQLAlchemy==2.5.1
 greenlet==1.1.2
+importlib-metadata==4.10.0
+importlib-resources==5.4.0
 itsdangerous==2.0.1
 Jinja2==3.0.3
+Mako==1.1.6
 MarkupSafe==2.0.1
+mysql-connector==2.2.9
+pycparser==2.21
 PyMySQL==1.0.2
+pytz==2021.3
+six==1.16.0
 SQLAlchemy==1.4.28
 Werkzeug==2.0.2
+zipp==3.6.0
